log
Thu May  5 15:29:13 UTC 2022: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:15: error: ‘new’ is used uninitialized in this function [-Werror=uninitialized]
    new->capac = 3;
    ~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3cca8f4
Thu May  5 15:29:56 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d01d724
Thu May  5 15:33:19 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0d6e842
Thu May  5 15:33:39 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:4: error: conversion to non-scalar type requested
    Heap * new = (Heap) malloc (sizeof(Heap));
    ^~~~
heap.c:40:4: error: conversion to non-scalar type requested
    new->heapArray = (heapElem) malloc (sizeof(heapElem));
    ^~~
Compilation failed
39409df
Thu May  5 15:33:58 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
05a1735
Thu May  5 15:37:00 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7accfc7
Thu May  5 15:39:21 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b7decd0
